bynkc/tests/fixtures/negative/42_orphan_doc_block/input.bynk
commons orphan.demo {
  ---
  This doc is orphaned because a blank line separates it from the next decl.
  ---

  type T = Int where Positive
}
